Anabasis.Deployment.Test.App/kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    group: appgroup
  name: appgroup
