Anabasis.Deployment.Test.App/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: appgroup-anabasis-deployment-test-app
    release: 1.0.67
    group: appgroup
  name: appgroup-anabasis-deployment-test-app
  namespace: appgroup
spec:
  selector:
    matchLabels:
      app: appgroup-anabasis-deployment-test-app
      release: 1.0.67
      group: appgroup
  template:
    metadata:
      labels:
        app: appgroup-anabasis-deployment-test-app
        release: 1.0.67
        group: appgroup
    spec:
      containers:
      - env:
        - name: config
          valueFrom:
            fieldRef:
              fieldPath: status.podIP
        image: https://hub.docker.com/appgroup-anabasis-deployment-test-app/NO_GIT_REPOS_DETECTED:1.0.67
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 1337
          initialDelaySeconds: 30
          periodSeconds: 60
          timeoutSeconds: 30
        name: appgroup-anabasis-deployment-test-app
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 1337
          name: health
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 1337
          initialDelaySeconds: 30
          periodSeconds: 20
          timeoutSeconds: 15
      imagePullSecrets:
      - name: registrysecret
