Anabasis.Deployment.Test.App/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    release: 1.0.67
    app: appgroup-anabasis-deployment-test-app
    group: appgroup
  name: svc-appgroup-anabasis-deployment-test-app
  namespace: appgroup
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  - name: health
    port: 1337
    protocol: TCP
    targetPort: 1337
  selector:
    app: appgroup-anabasis-deployment-test-app
    release: 1.0.67
  type: ClusterIP
