Anabasis.Deployment.Test.App/kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: appgroup-anabasis-deployment-test-app
    group: appgroup
  name: ingress-appgroup-anabasis-deployment-test-app
  namespace: appgroup
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: svc-appgroup-anabasis-deployment-test-app
            port:
              name: http
        path: /anabasis-deployment-test-app/v1
        pathType: ImplementationSpecific
